added all entities
